2019-01-22  Charlie Zender  <zender@uci.edu>

	* Document --d2f in manual and man pages

2019-01-21  Charlie Zender  <zender@uci.edu>

	* ncremap add SGS procedures for mpascice, change prc_typ='mpas' to prc_mpas='Yes'

	* ncremap advertise PPC in usage

2019-01-20  Charlie Zender  <zender@uci.edu>

	* Audit ncremap and add comments on treatment of land vs. sea-ice data

2019-01-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.9-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.9-alpha04: Shutdown';git push
	git tag -a 4.7.9-alpha04 -m 'ncremap add_depth.py';git push --tags

	* ncclimo add synonyms, update climo tests to use CMIP6 PI files

	* ncclimo add --dpt_fl option and pass to ncremap

2019-01-15  Charlie Zender  <zender@uci.edu>

	* Fix ncremap flag_grd_only definition to work in SGS mode

2019-01-12  Charlie Zender  <zender@uci.edu>

	* Finish infrastructure for add_depth.py. ncremap --add_depth appears to work.

2019-01-11  Charlie Zender  <zender@uci.edu>

	* Add stubs for MPAS depth coordinate option

2019-01-06  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.9-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.9-alpha03: AOC';git push
	git tag -a 4.7.9-alpha03 -m 'MPAS depth';git push --tags

	* ncremap allow for MPAS depth coordinate after processing by add_depth.py

2019-01-02  Charlie Zender  <zender@uci.edu>

	* End binary source code copyright notice with "--present" to nearly eliminate annual updates

2018-12-12  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.9-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.9-alpha02: Unconventional Diner';git push
	git tag -a 4.7.9-alpha02 -m 'splitter timestamps;mpas no_stg_grd;ncap2 exit_gracefully;get/put_var1 fix;ncrcat rec_apn rbs';git push --tags

	* ncra/ncrcat: Rebase in rec_apn mode using calendar units from destination not source file

2018-12-06  Charlie Zender  <zender@uci.edu>

	* Prevent redefinition of struct NC_memio on Windows
