@@ -703,6 +703,20 @@ nco_ppc_bitmask /* [fnc] Mask-out insignificant bits of significand */
 	for(idx=0L;idx<sz;idx++)
 	  if(op1.fp[idx] != mss_val_flt) u32_ptr[idx]|=msk_f32_u32_one;
       } /* end else */
+    }else if(nco_baa_cnv_get() == nco_baa_bg2){
+      /* Bit-Groom2: alternately shave and set LSBs with dynamic masks */
+      if(!has_mss_val){
+	for(idx=0L;idx<sz;idx+=2L) u32_ptr[idx]&=msk_f32_u32_zro;
+	for(idx=1L;idx<sz;idx+=2L)
+	  if(u32_ptr[idx] != 0U) /* Never quantize upwards floating point values of zero */
+	    u32_ptr[idx]|=msk_f32_u32_one;
+      }else{
+	const float mss_val_flt=*mss_val.fp;
+	for(idx=0L;idx<sz;idx+=2L)
+	  if(op1.fp[idx] != mss_val_flt) u32_ptr[idx]&=msk_f32_u32_zro;
+	for(idx=1L;idx<sz;idx+=2L)
+	  if(op1.fp[idx] != mss_val_flt && u32_ptr[idx] != 0U) u32_ptr[idx]|=msk_f32_u32_one;
+      } /* end else */
     }else abort();
     break;
   case NC_DOUBLE:
@@ -749,6 +763,20 @@ nco_ppc_bitmask /* [fnc] Mask-out insignificant bits of significand */
       }else{
 	const double mss_val_dbl=*mss_val.dp;
 	for(idx=0L;idx<sz;idx++)
+	  if(op1.dp[idx] != mss_val_dbl && u64_ptr[idx] != 0UL) u64_ptr[idx]|=msk_f64_u64_one;
+      } /* end else */
+    }else if(nco_baa_cnv_get() == nco_baa_bg2){
+      /* Bit-Groom: alternately shave and set LSBs with dynamic masks */
+      if(!has_mss_val){
+	for(idx=0L;idx<sz;idx+=2L) u64_ptr[idx]&=msk_f64_u64_zro;
+	for(idx=1L;idx<sz;idx+=2L)
+	  if(u64_ptr[idx] != 0UL) /* Never quantize upwards floating point values of zero */
+	    u64_ptr[idx]|=msk_f64_u64_one;
+      }else{
+	const double mss_val_dbl=*mss_val.dp;
+	for(idx=0L;idx<sz;idx+=2L)
+	  if(op1.dp[idx] != mss_val_dbl) u64_ptr[idx]&=msk_f64_u64_zro;
+	for(idx=1L;idx<sz;idx+=2L)
 	  if(op1.dp[idx] != mss_val_dbl && u64_ptr[idx] != 0UL) u64_ptr[idx]|=msk_f64_u64_one;
       } /* end else */
     }else abort();
